# economist-newspaper-rss-feed

./: .gitignore  LICENSE  README.md  feeds.example.toml  pyproject.toml  sample.env
.github/workflows/: tests.yml
deploy/: economist-rss-refresh.service  economist-rss-refresh.timer  economist-rss.service
docs/: EC2_DEPLOYMENT.md  PHONECLAW_SPLIT.md  RATE_LIMITING.md
src/economist_rss/: __init__.py  browser.py  cli.py  config.py  env.py  extract.py  feed.py  fetch.py  issue.py  refresh.py  server.py  store.py  util.py
tests/: test_browser_extract.py  test_extract.py  test_feed.py  test_issue.py  test_refresh.py  test_server.py  test_store.py
